[tool.poetry]
name = "anahtar"
version = "0.1.0"
description = ""
authors = ["mehmetcc <mehmetccm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.scripts]
start = "anahtar.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
